tests/errors/use_outside_scope.x
function myScope
  x = 12
endfunction

z = x + 2